# openspdm

./: CMakeLists.txt  GNUmakefile  GNUmakefile.Flags  Makefile  Makefile.Flags  contribution.md  readme.md  readme.txt
OsStub/BaseCryptLibMbedTls/: CMakeLists.txt  GNUmakefile  InternalCryptLib.h  Makefile
OsStub/BaseCryptLibMbedTls/Cipher/: CryptAeadAesCcm.c  CryptAeadAesGcm.c  CryptAeadChaCha20Poly1305.c  CryptAeadSm4Gcm.c
OsStub/BaseCryptLibMbedTls/Hash/: CryptSha2.c  CryptSha256.c  CryptSha3.c  CryptSha512.c  CryptSm3.c
OsStub/BaseCryptLibMbedTls/Hmac/: CryptHmacSha256.c
OsStub/BaseCryptLibMbedTls/Kdf/: CryptHkdf.c
OsStub/BaseCryptLibMbedTls/Mac/: CryptCmacAes.c  CryptGmacAes.c
OsStub/BaseCryptLibMbedTls/Pem/: CryptPem.c
OsStub/BaseCryptLibMbedTls/Pk/: CryptDh.c  CryptEc.c  CryptEcx.c  CryptEd.c  CryptPkcs7.c  CryptPkcs7Internal.h  CryptPkcs7Sign.c  CryptPkcs7VerifyCommon.c  CryptRsaBasic.c  CryptRsaExt.c  CryptSm2.c  CryptX509.c
OsStub/BaseCryptLibMbedTls/Rand/: CryptRand.c
OsStub/BaseCryptLibMbedTls/SysCall/: BaseMemAllocation.c  CrtWrapperHost.c  TimerWrapperHost.c
OsStub/BaseCryptLibOpenssl/: CMakeLists.txt  GNUmakefile  InternalCryptLib.h  Makefile
OsStub/BaseCryptLibOpenssl/Cipher/: CryptAeadAesCcm.c  CryptAeadAesGcm.c  CryptAeadChaCha20Poly1305.c  CryptAeadSm4Gcm.c
OsStub/BaseCryptLibOpenssl/Hash/: CryptSha2.c  CryptSha3.c  CryptSm3.c
OsStub/BaseCryptLibOpenssl/Hmac/: CryptHmacSha256.c
OsStub/BaseCryptLibOpenssl/Kdf/: CryptHkdf.c
OsStub/BaseCryptLibOpenssl/Pem/: CryptPem.c
OsStub/BaseCryptLibOpenssl/Pk/: CryptDh.c  CryptEc.c  CryptEcx.c  CryptEd.c  CryptPkcs7VerifyCommon.c  CryptPkcs7VerifyEku.c  CryptRsaBasic.c  CryptRsaExt.c  CryptSm2.c  CryptX509.c
OsStub/BaseCryptLibOpenssl/Rand/: CryptRand.c
OsStub/BaseMemoryLib/: CMakeLists.txt  CompareMem.c  CopyMem.c  GNUmakefile  Makefile  SetMem.c  ZeroMem.c
OsStub/MemoryAllocationLib/: CMakeLists.txt  GNUmakefile  Makefile  MemoryAllocationLib.c
OsStub/SpdmDeviceSecretLibNull/: CMakeLists.txt  GNUmakefile  Makefile
OsTest/SpdmRequesterEmu/: CMakeLists.txt  GNUmakefile  Makefile  SpdmRequester.c  SpdmRequesterAuthentication.c  SpdmRequesterEmu.c  SpdmRequesterMeasurement.c  SpdmRequesterSession.c
OsTest/SpdmRequesterTest/: CMakeLists.txt  GNUmakefile  Makefile  SpdmRequester.c  SpdmRequesterAuthentication.c  SpdmRequesterMeasurement.c  SpdmRequesterSession.c  SpdmRequesterTest.c  SpdmRequesterTest.h
OsTest/SpdmResponderEmu/: CMakeLists.txt  GNUmakefile  Makefile  SpdmResponder.c  SpdmResponderEmu.c  SpdmResponderMeasurement.c  SpdmResponderSession.c
OsTest/SpdmResponderTest/: CMakeLists.txt  GNUmakefile  Makefile  SpdmResponder.c  SpdmResponderMeasurement.c  SpdmResponderTest.c  SpdmResponderTest.h
SpdmDump/: CMakeLists.txt  GNUmakefile  Makefile  SpdmDump.c  SpdmDump.h  SpdmDumpPcap.c
SpdmDump/Mctp/: MctpDump.c
SpdmDump/Mctp/Pldm/: MctpDumpPldm.c
SpdmDump/Pci/: PciDoeDump.c
SpdmDump/Pci/PciDoe/: PciDoeDumpDoe.c
SpdmDump/Pci/PciIdeKm/: SpdmDumpPciIdeKm.c
SpdmDump/Spdm/: SpdmDumpSecuredSpdm.c  SpdmDumpSession.c  SpdmDumpSpdm.c
SpdmEmu/SpdmDeviceSecretLib/: CMakeLists.txt  GNUmakefile  Makefile  SpdmDeviceSecretLib.c
SpdmEmu/SpdmRequesterEmu/: CMakeLists.txt  GNUmakefile  Makefile  SpdmRequesterEmu.h
SpdmEmu/SpdmResponderEmu/: CMakeLists.txt  GNUmakefile  Makefile  SpdmResponderEmu.c  SpdmResponderEmu.h
UnitTest/CmockaLib/: .gitignore  CMakeLists.txt  GNUmakefile  Makefile
UnitTest/Fuzzing/TestSpdmRequesterGetVersion/: CMakeLists.txt  GNUmakefile  Makefile  TestSpdmRequesterGetVersion.c
UnitTest/Fuzzing/TestSpdmResponderVersion/: CMakeLists.txt  GNUmakefile  Makefile  TestSpdmResponderVersion.c
UnitTest/SpdmTransportTestLib/: CMakeLists.txt  GNUmakefile  Makefile  SpdmTransportCommonLib.c  SpdmTransportTestLib.c
UnitTest/TestCryptLib/: AeadVerify.c  AuthenticodeVerify.c  BlockCipherVerify.c  CMakeLists.txt  Cryptest.c  Cryptest.h  DhVerify.c  EcVerify.c  EcVerify2.c  EcxVerify.c  EdVerify.c  EdVerify2.c  GNUmakefile  HashVerify.c  HmacVerify.c  MacVerify.c  Makefile  Pkcs5Pbkdf2Verify.c  RandVerify.c  RsaVerify.c  RsaVerify2.c  Sm2Verify.c  Sm2Verify2.c  X509Verify.c
UnitTest/TestSize/BaseCryptLibDummy/: CMakeLists.txt  GNUmakefile  InternalCryptLib.h  Makefile
UnitTest/TestSize/BaseCryptStubLibDummy/: CMakeLists.txt  GNUmakefile  Makefile  RandDummy.c
UnitTest/TestSize/IntrinsicLib/: CMakeLists.txt  GNUmakefile  Makefile
UnitTest/TestSize/MemoryAllocationLibNull/: CMakeLists.txt  GNUmakefile  Makefile
UnitTest/TestSize/TestSizeOfSpdmRequester/: CMakeLists.txt  GNUmakefile  Makefile  SpdmRequester.h  SpdmRequesterAuthentication.c  SpdmRequesterInit.c  SpdmRequesterSession.c
UnitTest/TestSize/TestSizeOfSpdmResponder/: CMakeLists.txt  GNUmakefile  Makefile  (+2 more)
UnitTest/TestSpdmCommonLibCrypto/: CMakeLists.txt  GNUmakefile  Makefile  TestSpdmCommonLibCrypto.c
UnitTest/TestSpdmCryptLib/: CMakeLists.txt  GNUmakefile  Makefile  TestSpdmCryptLib.c
UnitTest/TestSpdmRequester/: CMakeLists.txt  GNUmakefile  Makefile  TestSpdmRequester.c  TestSpdmRequesterChallenge.c  TestSpdmRequesterEndSession.c  TestSpdmRequesterFinish.c  TestSpdmRequesterGetCapability.c  TestSpdmRequesterGetCertificate.c  TestSpdmRequesterGetDigest.c  TestSpdmRequesterGetMeasurement.c  TestSpdmRequesterGetVersion.c  TestSpdmRequesterHeartbeat.c  TestSpdmRequesterKeyExchange.c  TestSpdmRequesterNegotiateAlgorithm.c  TestSpdmRequesterPskExchange.c  TestSpdmRequesterPskFinish.c
UnitTest/TestSpdmResponder/: CMakeLists.txt  GNUmakefile  Makefile  TestSpdmResponder.c  TestSpdmResponderAlgorithm.c  TestSpdmResponderCapability.c  TestSpdmResponderCertificate.c  TestSpdmResponderChallengeAuth.c  TestSpdmResponderDigest.c  TestSpdmResponderEndSession.c  TestSpdmResponderFinish.c  TestSpdmResponderHeartbeat.c  TestSpdmResponderKeyExchange.c  TestSpdmResponderMeasurement.c  TestSpdmResponderPskExchange.c  TestSpdmResponderPskFinish.c  TestSpdmResponderRespondIfReady.c  TestSpdmResponderVersion.c
spdm_dump/spdm_dump/: CMakeLists.txt  spdm_dump.c  spdm_dump.h  spdm_dump_pcap.c  support.c
(+1275 files in other folders)
